--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# H2
 db.driver = org.h2.Driver
+db.url = jdbc:h2:tcp://localhost/~/app-market
+db.username = sa
+db.password =
+# Hibernate
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto = validate
+hibernate.show_sql = true
+hibernate.format_sql = true
+# Roles
 user.role.default = USER
 user.role.admin = ADMIN
