--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Ali-X</groupId>
-    <artifactId>HomeTask_6_1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>app-market</artifactId>
+    <version>1.0</version>
     <build>
         <plugins>
             <plugin>
